[package]
name = "iceaxe"
# Bumped automatically by CI on a release
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11"
pyo3 = { version = "0.21.2", features = ["extension-module"] }
serde_json = "1.0"

[dev-dependencies]

[profile.release]
opt-level = 3
debug = false
lto = true
incremental = false

[package.metadata.maturin]
name = "iceaxe"
